Update after review comments